AC_INIT([Name], [0.1-beta], [your@email])
AC_CONFIG_FILES([_oasis])  

Z3LIB=$(ocamlfind query -i-format -qe Z3)
WRAPPER=z3wrapper_actual.ml
rm -f src/smt/z3wrapper.ml
if test -z "$Z3LIB" ; then
   WRAPPER=z3wrapper_fake.ml
fi
cat src/smt/"$WRAPPER" >> src/smt/z3wrapper.ml;\
chmod -w src/smt/z3wrapper.ml

dnl oasis setup
AC_OUTPUT
dnl AC_SUBST(WRAPPER)
oasis setup
