AC_INIT([Mattias Roux], [0.1-beta], [roux@lri.fr])
AC_CONFIG_FILES([_oasis])  

Z3LIB=$(ocamlfind query -i-format -qe Z3)
WRAPPER=z3wrapper_actual.ml
rm -f src/smt/z3wrapper.ml
if test -z "$Z3LIB" ; then
   WRAPPER=z3wrapper_fake.ml
fi
cat src/smt/"$WRAPPER" >> src/smt/z3wrapper.ml;\
chmod -w src/smt/z3wrapper.ml

DESTDIR=
LIBDIR=$DESTDIR@libdir@/cubicle
VERSION=1.1.1
VERSION_STR=$(command -v git > /dev/null && git describe --tags || echo "$VERSION")

echo "let version = \""$VERSION_STR"\"" > src/version.ml
echo "let date = \""`date`"\"" >> src/version.ml
echo "let libdir = \""$LIBDIR"\"" >> src/version.ml

dnl oasis setup
AC_OUTPUT
dnl AC_SUBST(WRAPPER)
oasis setup
